@@ -15,7 +15,6 @@ import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -1227,9 +1226,9 @@ class VoiceManagerOnlineTtsPanelTest {
 	@Test
 	void testCreateInputStreamSource() throws Throwable {
 		//
-		Assertions.assertNull(createInputStreamSource(Util.toFile(Paths.get("."))));
+		Assertions.assertNull(createInputStreamSource(Util.toFile(Path.of("."))));
 		//
-		final File file = Util.toFile(Paths.get("pom.xml"));
+		final File file = Util.toFile(Path.of("pom.xml"));
 		//
 		if (Util.exists(file)) {
 			//
